--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,19 @@ spring.application.name=SCM
 server.port=8080
 
 #my sql database 
+spring.datasource.url=jdbc:mysql://localhost:3306/scm
+spring.datasource.username=root
+spring.datasource.password=root1234
 
+
+#jpa 
+spring.jpa.show-sql=true
+#for creating schema
+spring.jpa.hibernate.ddl-auto=update
+
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.format_sql=true
 
 #email config
 
