--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,5 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.format_sql=true
 
 #email config
-
+# spring.security.user.name=admin
+# spring.security.user.password=@dmin
