google login enable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,12 @@ spring.jpa.hibernate.ddl-auto=update
 #email config
 # spring.security.user.name=admin
 # spring.security.user.password=@dmin
+
+# oauth2 client configurations
+#google configure
+spring.security.oauth2.client.registration.google.client-name=google
+spring.security.oauth2.client.registration.google.client-id=17786890315-id62ih8e3v6nas3fpg1ditpjcf1q15g1.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
+
+# github configure
