--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,9 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-QIYbQrp6f
 spring.security.oauth2.client.registration.google.scope=email,profile
 
 # github configure
+
+#cloudinary config
+
+cloudinary.cloud.name=dwvm1sgsc
+cloudinary.api.key=173469291366848
+cloudinary.api.secret=tyNU2Gab4uM79w3mxdv26vWtBL4
