--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,28 @@
-spring.application.name=SCM
-server.port=8080
-
-#my sql database 
-spring.datasource.url=jdbc:mysql://localhost:3306/scm
-spring.datasource.username=root
-spring.datasource.password=root1234
 
 
-#jpa 
-spring.jpa.show-sql=true
-#for creating schema
-spring.jpa.hibernate.ddl-auto=update
+spring.application.name=${SPRING_APPLICATION_NAME}
+server.port=${SERVER_PORT}
 
+# MySQL Database
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.properties.hibernate.format_sql=true
+# JPA Config
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
 
-#email config
-# spring.security.user.name=admin
-# spring.security.user.password=@dmin
+# Email Config
+spring.security.user.name=${SPRING_SECURITY_USER_NAME}
+spring.security.user.password=${SPRING_SECURITY_USER_PASSWORD}
 
-# oauth2 client configurations
-#google configure
-spring.security.oauth2.client.registration.google.client-name=google
-spring.security.oauth2.client.registration.google.client-id=17786890315-id62ih8e3v6nas3fpg1ditpjcf1q15g1.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=email,profile
+# OAuth2 Client Configurations
+spring.security.oauth2.client.registration.google.client-name=${GOOGLE_CLIENT_NAME}
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=${GOOGLE_CLIENT_SCOPE}
 
-# github configure
-
-#cloudinary config
-
-cloudinary.cloud.name=dwvm1sgsc
-cloudinary.api.key=173469291366848
-cloudinary.api.secret=tyNU2Gab4uM79w3mxdv26vWtBL4
+# Cloudinary Config
+cloudinary.cloud.name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api.key=${CLOUDINARY_API_KEY}
+cloudinary.api.secret=${CLOUDINARY_API_SECRET}
